--- a/kRISC.csproj
+++ b/kRISC.csproj
@@ -61,6 +61,7 @@
     <Compile Include="Binding\BoundVariable.cs" />
     <Compile Include="Binding\KOSBinding.cs" />
     <Compile Include="Function\FunctionAttribute.cs" />
+    <Compile Include="Function\BuildList.cs" />
     <Compile Include="Function\Math.cs" />
     <Compile Include="Function\Misc.cs" />
     <Compile Include="Function\Persistence.cs" />
@@ -70,7 +71,7 @@
     <Compile Include="Suffixed\BodyTarget.cs" />
     <Compile Include="Compilation\CompileCache.cs" />
     <Compile Include="Suffixed\Config.cs" />
-    <Compile Include="Function\List.cs" />
+    <Compile Include="Function\PrintList.cs" />
     <Compile Include="Persistence\Harddisk.cs" />
     <Compile Include="InterProcessor\InterProcCommand.cs" />
     <Compile Include="InterProcessor\ProcessorManager.cs" />
