--- a/kRISC.csproj
+++ b/kRISC.csproj
@@ -76,6 +76,7 @@
     <Compile Include="Function\Suffixed.cs" />
     <Compile Include="Function\Trigonometry.cs" />
     <Compile Include="IUpdateObserver.cs" />
+    <Compile Include="Screen\SubBuffer.cs" />
     <Compile Include="Suffixed\BodyAtmosphere.cs" />
     <Compile Include="Suffixed\BodyTarget.cs" />
     <Compile Include="Compilation\CompileCache.cs" />
