--- a/kOS.csproj
+++ b/kOS.csproj
@@ -77,6 +77,7 @@
     <Compile Include="Function\Suffixed.cs" />
     <Compile Include="Function\Trigonometry.cs" />
     <Compile Include="IUpdateObserver.cs" />
+    <Compile Include="KSPLogger.cs" />
     <Compile Include="Screen\SubBuffer.cs" />
     <Compile Include="Suffixed\BodyAtmosphere.cs" />
     <Compile Include="Suffixed\BodyTarget.cs" />
