Syntax fixes: not operator, until with numbers, list indeces with numbers.

--- a/kOS.csproj
+++ b/kOS.csproj
@@ -148,7 +148,9 @@
     <Compile Include="Persistence\Volume.cs" />
     <Compile Include="Persistence\VolumeManager.cs" />
   </ItemGroup>
-  <ItemGroup />
+  <ItemGroup>
+    <None Include="Compilation\KS\kRISC.tpg" />
+  </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
   <PropertyGroup>
     <PostBuildEvent>
