Vector Rendering done.  I squashed about 15 commits together in my local repo into this one.
Very similar to the design of the original issue I wrote, but a bit
different as I saw things didn't work like I'd expected they would
origingally:

This commit message is long because in it I describe the design, and why it required some
changes to deeper kOS objects like UpdateHandler and Variable.

```
SYNTAX:
  set anArrow to VECDRAW().
  set anArrow:START to V(0,0,0).  // origin of vector tail.  default=v(0,0,0), ship's center.
  set anArrow:VEC to V(a,b,c). // any vector will work here.  default=null.
  set anArrow:COLOR to RGB(1,0,0). // color name, RGB() or RGBA() tuple.  default=RGB(1,1,1).
  set anArrow:LABEL to "string".  // shows text label on vector.  default="".
  set anArrow:SCALE to 5.0.  // how many meters per vector unit to draw in space. default=1.0
  set anArrow:SHOW to true.  // nothing appears until you do this.  can be toggled as desired. default=false.
  set anArrow:WIDTH to 0. // if 0, kOS dyanmically picks width.  If >0, you pick width.  default=0.

Note, VECTOR can be used as a synonym for VEC, and COLOUR for COLOR.

  // Parameters may be given all at once like so:
  set anArrow to VECDRAWARGS( a, b, c, d, e, f).
     where
       a = :START
       b = :VEC
       c = :COLOR
       d = :LABEL
       e = :SCALE
       f = :SHOW
```
A vecdraw will draw a vector on the screen visually in 3-D space, and remain there
until you explicitly remove it or make the variables holding it go away.  The vector
drawings are meant primarily as a debugging tool, but could be used to show things
to a user running the script if you wish.

Each VECDRAW object in kOS is a VectorRenderer object in C#.

The ship's coordinates in 3-D space keep moving.  After coming out of time warp,
the ship's center of mass is at (0,0,0), but it starts drifting after that.  KSP
only guarantees that the origin will be *near* the ship, not directly on it.
Therefore to keep the vector draw

--- a/kOS.csproj
+++ b/kOS.csproj
@@ -68,7 +68,7 @@
     <Compile Include="Binding\BoundVariable.cs" />
     <Compile Include="Binding\KOSBinding.cs" />
     <Compile Include="AddOns\RemoteTech2\RemoteTechFactory.cs" />
-    <Compile Include="Execution\ScopeLostObserver.cs" />
+    <Compile Include="Execution\KOSScopeObserver.cs" />
     <Compile Include="Factories\IFactory.cs" />
     <Compile Include="Factories\StandardFactory.cs" />
     <Compile Include="Function\FunctionAttribute.cs" />
