Got functionality working.  Committing as-is then going back to clean up spaghetti in a future fix.

--- a/kOS.csproj
+++ b/kOS.csproj
@@ -83,6 +83,7 @@
     <Compile Include="Function\Trigonometry.cs" />
     <Compile Include="IUpdateObserver.cs" />
     <Compile Include="KSPLogger.cs" />
+    <Compile Include="Screen\DelegateDialog.cs" />
     <Compile Include="Screen\KOSTextEditPopup.cs" />
     <Compile Include="Screen\SubBuffer.cs" />
     <Compile Include="Suffixed\BodyAtmosphere.cs" />
