attempting to fix ModuleManager

--- a/Resources/GameData/kOS/MM_Stock_Processor.cfg
+++ b/Resources/GameData/kOS/MM_Stock_Processor.cfg
@@ -1,4 +1,4 @@
-@PART[*]:HAS[@MODULE[ModuleCommand, !kOSProcessor]]:HAS[TechRequired[start]]:BEFORE[kOS]
+@PART[*]:HAS[@MODULE[ModuleCommand], !MODULE[kOSProcessor]]:HAS[TechRequired[start]]:BEFORE[kOS]
 {
     MODULE
     {
@@ -7,7 +7,7 @@
     }
 }
 
-@PART[*]:HAS[@MODULE[ModuleCommand, !kOSProcessor]]:HAS[TechRequired[flightControl]]:BEFORE[kOS]
+@PART[*]:HAS[@MODULE[ModuleCommand], !MODULE[kOSProcessor]]:HAS[TechRequired[flightControl]]:BEFORE[kOS]
 {
     MODULE
     {
@@ -16,7 +16,7 @@
     }
 }
 
-@PART[*]:HAS[@MODULE[ModuleCommand, !kOSProcessor]]:HAS[TechRequired[advFlightControl]]:BEFORE[kOS]
+@PART[*]:HAS[@MODULE[ModuleCommand], !MODULE[kOSProcessor]]:HAS[TechRequired[advFlightControl]]:BEFORE[kOS]
 {
     MODULE
     {
@@ -26,7 +26,7 @@
 }
 
 
-@PART[*]:HAS[@MODULE[ModuleCommand, !kOSProcessor]]:HAS[TechRequired[largeControl]]:BEFORE[kOS]
+@PART[*]:HAS[@MODULE[ModuleCommand], !MODULE[kOSProcessor]]:HAS[TechRequired[largeControl]]:BEFORE[kOS]
 {
     MODULE
     {
@@ -35,7 +35,7 @@
     }
 }
 
-@PART[*]:HAS[@MODULE[ModuleCommand, !kOSProcessor]]:HAS[TechRequired[specializedControl]]:BEFORE[kOS]
+@PART[*]:HAS[@MODULE[ModuleCommand], !MODULE[kOSProcessor]]:HAS[TechRequired[specializedControl]]:BEFORE[kOS]
 {
     MODULE
     {
@@ -44,7 +44,7 @@
     }
 }
 
-@PART[*]:HAS[@MODULE[ModuleCommand, !kOSProcessor]]:HAS[TechRequired[largeControl, unmannedTech]]:BEFORE[kOS]
+@PART[*]:HAS[@MODULE[ModuleCommand], !MODULE[kOSProcessor]]:HAS[TechRequired[unmannedTech]]:BEFORE[kOS]
 {
     MODULE
     {
@@ -53,12 +53,21 @@
     }
 }
 
-@PART[*]:HAS[@MODULE[ModuleCommand, !kOSProcessor]]:HAS[TechRequired[advUnmanned, unmannedTech]]:BEFORE[kOS]
+@PART[*]:HAS[@MODULE[ModuleCommand], !MODULE[kOSProcessor]]:HAS[TechRequired[largeControl]]:BEFORE[kOS]
 {
     MODULE
     {
         name = kOSProcessor
-	diskSpace = 35000
+	diskSpace = 21000
+    }
+}
+
+@PART[*]:HAS[@MODULE[ModuleCommand], !MODULE[kOSProcessor]]:HAS[TechRequired[advUnmanned]:BEFORE[kOS]
+{
+    MODULE
+    {
+        name = kOSProcessor
+	diskSpace = 34000
     }
 }
 
