--- a/Resources/GameData/kOS/MM_Stock_Processor.cfg
+++ b/Resources/GameData/kOS/MM_Stock_Processor.cfg
@@ -1,73 +1,71 @@
-@PART[*]:HAS[@MODULE[ModuleCommand], !MODULE[kOSProcessor]]:HAS[TechRequired[start]]:BEFORE[kOS]
+@PART[*]:HAS[@MODULE[ModuleCommand],!MODULE[kOSProcessor]]:HAS[TechRequired[advUnmanned]]:FOR[kOS]
 {
     MODULE
     {
         name = kOSProcessor
-	diskSpace = 1000
+	    diskSpace = 34000
     }
 }
 
-@PART[*]:HAS[@MODULE[ModuleCommand], !MODULE[kOSProcessor]]:HAS[TechRequired[flightControl]]:BEFORE[kOS]
+@PART[*]:HAS[@MODULE[ModuleCommand],!MODULE[kOSProcessor]]:HAS[TechRequired[unmannedTech]]:FOR[kOS]
 {
     MODULE
     {
         name = kOSProcessor
-	diskSpace = 3000
+	    diskSpace = 21000
     }
 }
 
-@PART[*]:HAS[@MODULE[ModuleCommand], !MODULE[kOSProcessor]]:HAS[TechRequired[advFlightControl]]:BEFORE[kOS]
+@PART[*]:HAS[@MODULE[ModuleCommand],!MODULE[kOSProcessor]]:HAS[TechRequired[largeControl]]:FOR[kOS]
 {
     MODULE
     {
         name = kOSProcessor
-	diskSpace = 5000
+	    diskSpace = 21000
     }
 }
 
-
-@PART[*]:HAS[@MODULE[ModuleCommand], !MODULE[kOSProcessor]]:HAS[TechRequired[largeControl]]:BEFORE[kOS]
+@PART[*]:HAS[@MODULE[ModuleCommand],!MODULE[kOSProcessor]]:HAS[TechRequired[specializedControl]]:FOR[kOS]
 {
     MODULE
     {
         name = kOSProcessor
-	diskSpace = 8000
+        diskSpace = 13000
     }
 }
 
-@PART[*]:HAS[@MODULE[ModuleCommand], !MODULE[kOSProcessor]]:HAS[TechRequired[specializedControl]]:BEFORE[kOS]
+@PART[*]:HAS[@MODULE[ModuleCommand],!MODULE[kOSProcessor]]:HAS[TechRequired[largeControl]]:FOR[kOS]
 {
     MODULE
     {
         name = kOSProcessor
-	diskSpace = 13000
+        diskSpace = 8000
     }
 }
 
-@PART[*]:HAS[@MODULE[ModuleCommand], !MODULE[kOSProcessor]]:HAS[TechRequired[unmannedTech]]:BEFORE[kOS]
+@PART[*]:HAS[@MODULE[ModuleCommand],!MODULE[kOSProcessor]]:HAS[TechRequired[advFlightControl]]:FOR[kOS]
 {
     MODULE
     {
         name = kOSProcessor
-	diskSpace = 21000
+	    diskSpace = 5000
     }
 }
 
-@PART[*]:HAS[@MODULE[ModuleCommand], !MODULE[kOSProcessor]]:HAS[TechRequired[largeControl]]:BEFORE[kOS]
+@PART[*]:HAS[@MODULE[ModuleCommand],!MODULE[kOSProcessor]]:HAS[TechRequired[flightControl]]:FOR[kOS]
 {
     MODULE
     {
         name = kOSProcessor
-	diskSpace = 21000
+	    diskSpace = 3000
     }
 }
 
-@PART[*]:HAS[@MODULE[ModuleCommand], !MODULE[kOSProcessor]]:HAS[TechRequired[advUnmanned]:BEFORE[kOS]
+@PART[*]:HAS[@MODULE[ModuleCommand],!MODULE[kOSProcessor]]:HAS[TechRequired[start]]:FOR[kOS]
 {
     MODULE
     {
         name = kOSProcessor
-	diskSpace = 34000
+	    diskSpace = 1000
     }
 }
-
