--- a/src/kOS.csproj
+++ b/src/kOS.csproj
@@ -88,6 +88,7 @@
     <Compile Include="Suffixed\BodyAtmosphere.cs" />
     <Compile Include="Suffixed\BodyTarget.cs" />
     <Compile Include="Compilation\CompileCache.cs" />
+    <Compile Include="Suffixed\Orbitable.cs" />
     <Compile Include="Suffixed\RgbaColor.cs" />
     <Compile Include="Suffixed\Config.cs" />
     <Compile Include="Function\PrintList.cs" />
@@ -152,7 +153,7 @@
     <Compile Include="Suffixed\VesselSensors.cs" />
     <Compile Include="Suffixed\VesselTarget.cs" />
     <Compile Include="Utilities\VesselUtils.cs" />
-    <Compile Include="Suffixed\VesselVelocity.cs" />
+    <Compile Include="Suffixed\Velocities.cs" />
     <Compile Include="Persistence\Volume.cs" />
     <Compile Include="Persistence\VolumeManager.cs" />
   </ItemGroup>
