a bunch of static analysis cleanup

--- a/src/kOS.csproj
+++ b/src/kOS.csproj
@@ -70,7 +70,7 @@
     <Compile Include="AddOns\RemoteTech2\RemoteTechFactory.cs" />
     <Compile Include="Compilation\CompilerOptions.cs" />
     <Compile Include="Compilation\ProgramBuilderInterpreter.cs" />
-    <Compile Include="Execution\KOSScopeObserver.cs" />
+    <Compile Include="Execution\IKOSScopeObserver.cs" />
     <Compile Include="Factories\IFactory.cs" />
     <Compile Include="Factories\StandardFactory.cs" />
     <Compile Include="Function\FunctionAttribute.cs" />
