--- a/src/kOS.csproj
+++ b/src/kOS.csproj
@@ -70,6 +70,7 @@
     <Compile Include="AddOns\RemoteTech2\RemoteTechFactory.cs" />
     <Compile Include="Compilation\CompilerOptions.cs" />
     <Compile Include="Compilation\ProgramBuilderInterpreter.cs" />
+    <Compile Include="Execution\FileRange.cs" />
     <Compile Include="Execution\SurboutineContext.cs" />
     <Compile Include="Execution\IKOSScopeObserver.cs" />
     <Compile Include="Factories\IFactory.cs" />
