partway implemented ML file dumper.
Nowhere near done yet - just pushing to fork so I can show whats there
to others.

--- a/src/kOS.csproj
+++ b/src/kOS.csproj
@@ -69,6 +69,7 @@
     <Compile Include="Binding\KOSBinding.cs" />
     <Compile Include="AddOns\RemoteTech2\RemoteTechFactory.cs" />
     <Compile Include="Compilation\CompilerOptions.cs" />
+    <Compile Include="Compilation\CompiledObject.cs" />
     <Compile Include="Compilation\ProgramBuilderInterpreter.cs" />
     <Compile Include="Execution\SurboutineContext.cs" />
     <Compile Include="Execution\IKOSScopeObserver.cs" />
