--- a/src/kOS.Safe/kOS.Safe.csproj
+++ b/src/kOS.Safe/kOS.Safe.csproj
@@ -38,23 +38,46 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="Compilation\Calculator.cs" />
     <Compile Include="Compilation\CodePart.cs" />
     <Compile Include="Compilation\CompileCache.cs" />
     <Compile Include="Compilation\CompilerOptions.cs" />
+    <Compile Include="Compilation\KS\Compiler.cs" />
+    <Compile Include="Compilation\KS\Context.cs" />
+    <Compile Include="Compilation\KS\Helpers.cs" />
+    <Compile Include="Compilation\KS\KSScript.cs" />
+    <Compile Include="Compilation\KS\Parser.cs" />
+    <Compile Include="Compilation\KS\ParseTree.cs" />
+    <Compile Include="Compilation\KS\Scanner.cs" />
     <Compile Include="Compilation\OpCode.cs" />
+    <Compile Include="Compilation\Opcodes.cs" />
+    <Compile Include="Compilation\ProgramBuilder.cs" />
+    <Compile Include="Compilation\ProgramBuilderInterpreter.cs" />
+    <Compile Include="Compilation\Script.cs" />
+    <Compile Include="Encapsulation\ConstantValue.cs" />
+    <Compile Include="Encapsulation\FileInfo.cs" />
+    <Compile Include="Encapsulation\IIndexable.cs" />
     <Compile Include="Encapsulation\IOperable.cs" />
     <Compile Include="Encapsulation\ISetSuffix.cs" />
     <Compile Include="Encapsulation\ISuffix.cs" />
     <Compile Include="Encapsulation\ISuffixed.cs" />
+    <Compile Include="Encapsulation\ListValue.cs" />
     <Compile Include="Encapsulation\Structure.cs" />
+    <Compile Include="Encapsulation\VersionInfo.cs" />
     <Compile Include="Execution\IKOSScopeObserver.cs" />
     <Compile Include="Execution\ICpu.cs" />
     <Compile Include="Execution\SurboutineContext.cs" />
     <Compile Include="Execution\Variable.cs" />
     <Compile Include="IUpdateObserver.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <Compile Include="Screen\ScreenBuffer.cs" />
+    <Compile Include="Screen\SubBuffer.cs" />
+    <Compile Include="Screen\TextEditor.cs" />
     <Compile Include="UpdateHandler.cs" />
+    <Compile Include="Utilities\Flushable.cs" />
+    <Compile Include="Utilities\kOSKeys.cs" />
   </ItemGroup>
+  <ItemGroup />
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
   <!-- To modify your build process, add your task inside one of the targets below and uncomment it. 
        Other similar extension points exist, see Microsoft.Common.targets.
