--- a/src/kOS.Safe/kOS.Safe.csproj
+++ b/src/kOS.Safe/kOS.Safe.csproj
@@ -68,7 +68,9 @@
     <Compile Include="Execution\ICpu.cs" />
     <Compile Include="Execution\SurboutineContext.cs" />
     <Compile Include="Execution\Variable.cs" />
+    <Compile Include="ILogger.cs" />
     <Compile Include="IUpdateObserver.cs" />
+    <Compile Include="Module\IProcessor.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="Screen\ScreenBuffer.cs" />
     <Compile Include="Screen\SubBuffer.cs" />
