--- a/src/kOS.Safe/kOS.Safe.csproj
+++ b/src/kOS.Safe/kOS.Safe.csproj
@@ -64,6 +64,13 @@
     <Compile Include="Encapsulation\ListValue.cs" />
     <Compile Include="Encapsulation\Structure.cs" />
     <Compile Include="Encapsulation\VersionInfo.cs" />
+    <Compile Include="Exceptions\IKOSException.cs" />
+    <Compile Include="Exceptions\KOSCastException.cs" />
+    <Compile Include="Exceptions\KOSCompileException.cs" />
+    <Compile Include="Exceptions\KOSBinaryOperandTypeException.cs" />
+    <Compile Include="Exceptions\KOSLongTriggerException.cs" />
+    <Compile Include="Exceptions\KOSParseException.cs" />
+    <Compile Include="Exceptions\KOSUnaryOperandTypeException.cs" />
     <Compile Include="Execution\IKOSScopeObserver.cs" />
     <Compile Include="Execution\ICpu.cs" />
     <Compile Include="Execution\SurboutineContext.cs" />
@@ -80,6 +87,9 @@
   <ItemGroup>
     <None Include="Compilation\CompiledObject-doc.md" />
     <None Include="Compilation\KS\kRISC.tpg" />
+  </ItemGroup>
+  <ItemGroup>
+    <Folder Include="Exceptions" />
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
   <!-- To modify your build process, add your task inside one of the targets below and uncomment it. 
