--- a/src/kOS.Safe/kOS.Safe.csproj
+++ b/src/kOS.Safe/kOS.Safe.csproj
@@ -68,7 +68,7 @@
     <Compile Include="Encapsulation\Structure.cs" />
     <Compile Include="Encapsulation\Suffix.cs" />
     <Compile Include="Encapsulation\VersionInfo.cs" />
-    <Compile Include="Exceptions\IKOSException.cs" />
+    <Compile Include="Exceptions\KOSException.cs" />
     <Compile Include="Exceptions\KOSBreakInvalidHereException.cs" />
     <Compile Include="Exceptions\KOSCastException.cs" />
     <Compile Include="Exceptions\KOSCommandInvalidHere.cs" />
@@ -99,9 +99,7 @@
     <None Include="Compilation\CompiledObject-doc.md" />
     <None Include="Compilation\KS\kRISC.tpg" />
   </ItemGroup>
-  <ItemGroup>
-    <Folder Include="Exceptions" />
-  </ItemGroup>
+  <ItemGroup />
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
   <!-- To modify your build process, add your task inside one of the targets below and uncomment it. 
        Other similar extension points exist, see Microsoft.Common.targets.
