Added entry costs and full throttle escape

--- a/Resources/GameData/kOS/Parts/kOSMachine0m/part.cfg
+++ b/Resources/GameData/kOS/Parts/kOSMachine0m/part.cfg
@@ -21,6 +21,7 @@ TechRequired = precisionEngineering
 
 // --- editor parameters ---
 cost = 1200
+entryCost = 6800
 category = Control
 subcategory = 0
 title = KR-2042 b Scriptable Control System
