--- a/Resources/GameData/kOS/Parts/kOSMachine1m/part.cfg
+++ b/Resources/GameData/kOS/Parts/kOSMachine1m/part.cfg
@@ -21,6 +21,7 @@ TechRequired = flightControl
 
 // --- editor parameters ---
 cost = 1200
+entryCost = 4200
 category = Control
 subcategory = 0
 title = CX-4181 Scriptable Control System
