--- a/src/kOS.Safe.Test/kOS.Safe.Test.csproj
+++ b/src/kOS.Safe.Test/kOS.Safe.Test.csproj
@@ -48,8 +48,10 @@
     <Compile Include="ListValueTest.cs" />
     <Compile Include="NoArgsSuffixTest.cs" />
     <Compile Include="SetSuffixTest.cs" />
+    <Compile Include="StructureSuffixIntegrationTest.cs" />
     <Compile Include="StructureTest.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <Compile Include="TestLogger.cs" />
     <Compile Include="TwoArgsVoidSuffixTest.cs" />
   </ItemGroup>
   <ItemGroup>
