method call return null no longer gives bogus error.
Previously, if you had this:
    // FOO IS some sort of list.
    SET ITER TO FOO:ITER.

And did this:
    ITER:RESET.

Instead of this:
    ITER:RESET().

Then it *would* work, but after calling Enumerator.GetMethod("RESET")
it would incorrectly claim "RESET" is not a suffix of ITER.  This was
because Structure.GetMethod() uses null returns as its way of
communicating that a suffix doesn't exist.  It should have used an
exception, which is what it does now.

--- a/src/kOS.Safe/kOS.Safe.csproj
+++ b/src/kOS.Safe/kOS.Safe.csproj
@@ -53,6 +53,7 @@
     <Compile Include="Compilation\Opcode.cs" />
     <Compile Include="Compilation\ProgramBuilder.cs" />
     <Compile Include="Compilation\ProgramBuilderInterpreter.cs" />
+    <Compile Include="Compilation\PseudoNull.cs" />
     <Compile Include="Compilation\Script.cs" />
     <Compile Include="Encapsulation\ConstantValue.cs" />
     <Compile Include="Encapsulation\FileInfo.cs" />
@@ -85,6 +86,7 @@
     <Compile Include="Exceptions\KOSLongTriggerException.cs" />
     <Compile Include="Exceptions\KOSParseException.cs" />
     <Compile Include="Exceptions\KOSPreserveInvalidHereException.cs" />
+    <Compile Include="Exceptions\KOSSuffixUseException.cs" />
     <Compile Include="Exceptions\KOSWaitInValidHereException.cs" />
     <Compile Include="Exceptions\KOSUnaryOperandTypeException.cs" />
     <Compile Include="Execution\IKOSScopeObserver.cs" />
