created a bootstrapper that will prompt a user to upgrade

--- a/src/kOS/kOS.csproj
+++ b/src/kOS/kOS.csproj
@@ -78,6 +78,7 @@
     <Compile Include="Function\Suffixed.cs" />
     <Compile Include="Function\Trigonometry.cs" />
     <Compile Include="KSPLogger.cs" />
+    <Compile Include="Module\Bootstrapper.cs" />
     <Compile Include="Screen\DelegateDialog.cs" />
     <Compile Include="Screen\KOSManagedWindow.cs" />
     <Compile Include="Screen\KOSTextEditPopup.cs" />
