Fixed :PATCHES and moved it to Vessel.
Also implemented :NEXTPATCH and :HASNEXTPATCH on Orbit.

--- a/src/kOS.Safe/kOS.Safe.csproj
+++ b/src/kOS.Safe/kOS.Safe.csproj
@@ -82,11 +82,13 @@
     <Compile Include="Exceptions\KOSCommandInvalidHere.cs" />
     <Compile Include="Exceptions\KOSCompileException.cs" />
     <Compile Include="Exceptions\KOSBinaryOperandTypeException.cs" />
+    <Compile Include="Exceptions\KOSDeprecationException.cs" />
     <Compile Include="Exceptions\KOSException.cs" />
     <Compile Include="Exceptions\KOSInvalidFieldValueException.cs" />
     <Compile Include="Exceptions\KOSLongTriggerException.cs" />
     <Compile Include="Exceptions\KOSLookupFailException.cs" />
     <Compile Include="Exceptions\KOSParseException.cs" />
+    <Compile Include="Exceptions\KOSPatchesDeprecationException.cs" />
     <Compile Include="Exceptions\KOSPreserveInvalidHereException.cs" />
     <Compile Include="Exceptions\KOSSuffixUseException.cs" />
     <Compile Include="Exceptions\KOSWaitInValidHereException.cs" />
