--- a/src/kOS/kOS.csproj
+++ b/src/kOS/kOS.csproj
@@ -88,7 +88,7 @@
     <Compile Include="Suffixed\BodyTarget.cs" />
     <Compile Include="Suffixed\Orbitable.cs" />
     <Compile Include="Suffixed\Part\ModuleEngineAdapter.cs" />
-    <Compile Include="Suffixed\Part\PartFactory.cs" />
+    <Compile Include="Suffixed\Part\PartValueFactory.cs" />
     <Compile Include="Suffixed\Part\PartModuleFields.cs" />
     <Compile Include="Suffixed\RgbaColor.cs" />
     <Compile Include="Suffixed\Config.cs" />
