--- a/src/kOS.Safe/kOS.Safe.csproj
+++ b/src/kOS.Safe/kOS.Safe.csproj
@@ -106,6 +106,10 @@
     <Compile Include="ILogger.cs" />
     <Compile Include="IUpdateObserver.cs" />
     <Compile Include="Module\IProcessor.cs" />
+    <Compile Include="Persistence\FileCategory.cs" />
+    <Compile Include="Persistence\KOSFileException.cs" />
+    <Compile Include="Persistence\PersistenceUtilities.cs" />
+    <Compile Include="Persistence\ProgramFile.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="Properties\Resources.Designer.cs">
       <AutoGen>True</AutoGen>
