moved what i could of sharedobjects to safe

--- a/src/kOS.Safe/kOS.Safe.csproj
+++ b/src/kOS.Safe/kOS.Safe.csproj
@@ -123,6 +123,7 @@
     <Compile Include="Screen\ScreenBuffer.cs" />
     <Compile Include="Screen\SubBuffer.cs" />
     <Compile Include="Screen\TextEditor.cs" />
+    <Compile Include="SharedObjects.cs" />
     <Compile Include="UpdateHandler.cs" />
     <Compile Include="Utilities\Debug.cs" />
     <Compile Include="Utilities\Flushable.cs" />
