--- a/src/kOS/kOS.csproj
+++ b/src/kOS/kOS.csproj
@@ -72,6 +72,7 @@
     <Compile Include="Factories\IFactory.cs" />
     <Compile Include="Factories\StandardFactory.cs" />
     <Compile Include="Function\BuildList.cs" />
+    <Compile Include="Function\FunctionManager.cs" />
     <Compile Include="Function\Math.cs" />
     <Compile Include="Function\Misc.cs" />
     <Compile Include="Function\Persistence.cs" />
