--- a/src/kOS.Safe/kOS.Safe.csproj
+++ b/src/kOS.Safe/kOS.Safe.csproj
@@ -39,6 +39,8 @@
   </ItemGroup>
   <ItemGroup>
     <Compile Include="Binding\BindingAttribute.cs" />
+    <Compile Include="Binding\BindingDelgate.cs" />
+    <Compile Include="Binding\BoundVariable.cs" />
     <Compile Include="Compilation\Calculator.cs" />
     <Compile Include="Compilation\CodePart.cs" />
     <Compile Include="Compilation\CompileCache.cs" />
