--- a/src/kOS/kOS.csproj
+++ b/src/kOS/kOS.csproj
@@ -89,6 +89,7 @@
     <Compile Include="Suffixed\BodyTarget.cs" />
     <Compile Include="Suffixed\Orbitable.cs" />
     <Compile Include="Suffixed\Part\ModuleEngineAdapter.cs" />
+    <Compile Include="Suffixed\Part\PartModuleFieldsFactory.cs" />
     <Compile Include="Suffixed\Part\PartValueFactory.cs" />
     <Compile Include="Suffixed\Part\PartModuleFields.cs" />
     <Compile Include="Suffixed\RgbaColor.cs" />
